crates/uitest/fixtures/parser/trait_pub_fn.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/trait_pub_fn.fe
---
error[1-0001]: only `fn` is allowed in the block
  ┌─ trait_pub_fn.fe:2:5
  │
2 │     pub fn foo(mut self)
  │     ^^^ only `fn` is allowed in the block

error[1-0001]: expected newline after item definition
  ┌─ trait_pub_fn.fe:2:9
  │
2 │     pub fn foo(mut self)
  │         ^^ expected newline after item definition

error[1-0001]: only `fn` is allowed in the block
  ┌─ trait_pub_fn.fe:3:5
  │
3 │     pub unsafe fn bar(self)
  │     ^^^ only `fn` is allowed in the block

error[1-0001]: expected newline after item definition
  ┌─ trait_pub_fn.fe:3:16
  │
3 │     pub unsafe fn bar(self)
  │                ^^ expected newline after item definition


